# ds-ml

./: Hw1.ipynb  Hw2_1.ipynb  Hw2_2.ipynb  Hw2_3.ipynb  Hw3.1.ipynb  Hw4.1.ipynb  Hw5.1.ipynb  Hw6.1.ipynb  Hw7.1.ipynb  Hw8.1.ipynb  Hw9.1.ipynb  homework-10.ipynb  homework-11.ipynb  homework-12.ipynb
goit-ds-hw-13/: README.md  app.py  models.py  pyproject.toml
goit-ds-hw-13/models/: history_6.pkl  history_6_vgg16.pkl
