[tool.poetry]
name = "goit-ds-hw-13"
version = "0.1.0"
description = "GoIT, Homework #13, Streamlit"
authors = ["artur.trotskyi <artur.trotskyi@ukr.net>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.44.1"
tensorflow = "^2.19.0"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
